--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,20 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
 	<display-name>spring-aop-log</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
 
 	<!-- 继承主配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/spring-config.xml</param-value>
 	</context-param>
-
-	<!--Spring上下文监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -56,18 +62,40 @@
 	</servlet-mapping>
 	<!-- springmvc 控制器 -->
 
-	<!-- log4j配置 -->
+	<!-- log4j配置，context-param可以省略不配，因为默认就会在src/main/resources找这个文件，所以不需要额外配置引用 -->
 	<context-param>
-		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:config/log4j.properties</param-value>
+		<param-name>Log4jServletContextLocation</param-name>
+		<param-value>classpath:log4j2.xml</param-value>
 	</context-param>
 	<listener>
-		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
 	</listener>
-	<!-- log4j配置 -->
+	<!-- log4j配置Filter -->
+	<filter>
+		<filter-name>log4jServletFilter</filter-name>
+		<filter-class>org.apache.logging.log4j.web.Log4jServletFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>log4jServletFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
+
 
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
+
+	<!-- 删除空白行 -->
+	<!-- jsp中会经常使用到使用jsp标签和jstl的标签，比如<%@ page …%>, <%@ taglib …%>, <c:forEach…%>, 尤其是循环标签，在jsp最终输出的html中会产生大量的空行，使得性能降低。 -->
+	<jsp-config>
+		<jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<trim-directive-whitespaces>true</trim-directive-whitespaces>
+		</jsp-property-group>
+	</jsp-config>
 
 </web-app>
